ns-integrador/portaldevops/dev/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-portaldevops
  namespace: dev-ns-integrador
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-portaldevops
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: dev-portaldevops
    spec:
      containers:
        - name: dev-portaldevops
          image: "rodrigomotadevops/dev-portaldevops:8901764328"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 300m
              memory: 400Mi
            requests:
              cpu: 150m
              memory: 200Mi
      terminationGracePeriodSeconds: 300
