ns-integrador/portaldevops/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portaldevops
  namespace: dev-ns-integrador
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/issuer: letsencrypt-nginx
    Versao-RetryBuild: 2

spec:
  tls:
  - hosts:
    -  dev-portaldevops.purecloud.com.br
    secretName: meu-tls-dev-portaldevops.purecloud.com.br
  rules:
  - host: dev-portaldevops.purecloud.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-portaldevops
            port:
              number: 80
